# PoECraftingAssistant

./: README.md  pyproject.toml
examples/: poe2_filter.json  poe2_item.txt
poe2_assistant/: __init__.py  cli.py  filters.py  models.py  parser.py
tests/: test_filters.py
