[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2-crafting-assistant"
version = "0.1.0"
description = "Python-based Path of Exile 2 item text evaluator for crafting filters"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PoECraftingAssistant contributors" }]
dependencies = []

[project.scripts]
poe2-assistant = "poe2_assistant.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
